--- a/resume.html
+++ b/resume.html
@@ -2,21 +2,28 @@
 <head>
 <title>RESUME</title>
 </head>
-<body><center><strong><h3>RESUME</h3></strong></center></body>
+<body><center><strong><h3>RAVITEJA REKULAPELLY</h3></strong></center></body>
+<body><center><strong>Email:rekulapellyraviteja43@gmail.com</strong></center></body>
+<body><center><strong>Linkedin:linkedin.com/in/raviteja-rekulapelly-b98471228</strong></center></body>
+<body><center><strong>Github:https://github.com/rekulapelly</strong></center>
 <hr>
-<body><b><h3>OBJECTIVE</h3></b></body>
+<body><b><h3><u>OBJECTIVE</u></h3></b></body>
 <body>To bring my skills to the company where I play an integral role in the growth of the company and where I too can grow, while challenges and implementing solutions along the way.</body>
 <hr>
-<body><b><h3>EDUCATION</h3></body></b>
+<body><b><h3><u>EDUCATION</u></h3></body></b>
 <body><b>BTECH</b>  Balaji institute of Tecnology and Science</body><br>
 <body><b>Intermediate</b> Shivani Junior College</body><br>
 <body><b>SSC</b> Rishi High School</body><br>
 <hr>
-<body><b><h3>TECHINCAL SKILLS</h3></b></body>
-<body>Programming <mark>Python,C</mark></body><br>
-<body>Technologies <mark>HTML,CSS</mark></body><br>
+<body><b><h3><u>TECHINCAL SKILLS</u></h3></b></body>
+<ul style=list-style-type:disc;">
+<li>Python Programming</body><br>
+<li>AWS Cloud Services</body><br>
+</ul>
 <hr>
-<body><b><h3>PROJECTS</h3></b></body>
-<body>AI chatbot using python flask framework</body><br>
-<body>Leaf disease Detection using CNN</body>
+<body><b><h3><u>PROJECTS</u></h3></b></body>
+<ul style="list-style-type:disc;">
+<li>AI chatbot using python flask framework</li><br>
+<li>Leaf disease Detection using CNN</li>
+</ul>
 </html>
