--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 </head>
 <body><center><strong><h3>RAVITEJA REKULAPELLY</h3></strong></center></body>
 <body><center><strong>Email:rekulapellyraviteja43@gmail.com</strong></center></body>
-<body><center><strong>Linkedin:linkedin.com/in/raviteja-rekulapelly-b98471228</strong></center></body>
+<body><center><strong>Linkedin:www.linkedin.com/in/raviteja-rekulapelly-b98471228</strong></center></body>
 <body><center><strong>Github:https://github.com/rekulapelly</strong></center>
 <hr>
 <body><b><h3><u>OBJECTIVE</u></h3></b></body>
@@ -23,7 +23,8 @@
 <hr>
 <body><b><h3><u>PROJECTS</u></h3></b></body>
 <ul style="list-style-type:disc;">
-<li>AI chatbot using python flask framework</li><br>
+<li>AI chatbot using python flask framework</li>
 <li>Leaf disease Detection using CNN</li>
 </ul>
 </html>
+
